# swagger.yaml
@@ -1155,6 +1155,17 @@ components:
         name:
           type: string
           example: Admin
+        permissions:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 1
+              name:
+                type: string
+                example: Admin
 
     RoleCreatePayload:
       type: object
